...
                      _TabItem(
                          label: 'Ana Sayfa',
                          icon: CupertinoIcons.house,
                          active: navigationShell.currentIndex == 4,
                          onTap: () => goBranch(4)),
                      _TabItem(
                          label: 'Ara',
                          icon: CupertinoIcons.search,
                          active: navigationShell.currentIndex == 0,
                          onTap: () => goBranch(0)),
                      _TabItem(
                          label: 'İlan Ver',
                          icon: CupertinoIcons.add_circled,
...
